--- a/examples/chatssm/pyproject.toml
+++ b/examples/chatssm/pyproject.toml
@@ -1,6 +1,8 @@
 [tool.poetry]
 name = "chatssm"
-packages = [ { include = "../chatssm" } ]
+#packages = [
+#    { include = "../chatssm" },
+#]
 version = "0.0.1"
 description = "ChatSSM Sandbox"
 authors = ["ctn <ctn@aitomatic.com>"]
@@ -21,3 +23,5 @@ flask = "^2.0.0"
 python-dotenv = "^0.19.0"
 llama-index = ">=0.6.9"
 llama-hub = ">=0.0.1"
+openssm = ">=0.0.1"
+gunicorn = ">=20.1.0"
