Checkpoint release to OSS

--- a/.github/workflows/make_test.yml
+++ b/.github/workflows/make_test.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           poetry install
           poetry run pip install xformers==0.0.20
+          make jest-setup
 
       - name: Run Make Test
         run: make test
