--- a/.pylintrc
+++ b/.pylintrc
@@ -519,7 +519,7 @@ contextmanager-decorators=contextlib.contextmanager
 # List of members which are set dynamically and missed by pylint inference
 # system, and so shouldn't trigger E1101 when accessed. Python regular
 # expressions are accepted.
-generated-members=
+generated-members=numpy.*, torch.*
 
 # Tells whether to warn about missing members when the owner of the attribute
 # is inferred to be None.
@@ -631,6 +631,8 @@ disable=raw-checker-failed,
 	relative-beyond-top-level,
 	useless-parent-delegation,
 	import-error,
+	unrecognized-option,
+	unnecessary-pass,
 	unspecified-encoding
 
 # Enable the message, report, category or checker with the given id(s). You can
