--- a/examples/chatssm/pyproject.toml
+++ b/examples/chatssm/pyproject.toml
@@ -23,5 +23,8 @@ flask = "^2.0.0"
 python-dotenv = "^0.19.0"
 llama-index = ">=0.6.9"
 llama-hub = ">=0.0.1"
-openssm = ">=0.0.1"
+openssm = ">=0.1.3"
 gunicorn = ">=20.1.0"
+torch = "=1.13.1"
+#nvidia-cuda-nvrtc-cu11 = "=11.7.99"
+#nvidia-cuda-runtime-cu11 = "=11.7.99"
