--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ authors = ["Aitomatic Engineering <engineering@aitomatic.com>"]
 description = "OpenSSM – 'Small Specialist Models' for Industrial AI"
 name = "openssm"
 readme = "README.md"
-version = "0.1.1"
+version = "0.1.3"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
@@ -20,6 +20,7 @@ einops = "^0.6.1"
 pypdf = ">=3.11.0"
 pytest = ">=7.0.0"
 transformers = "^4.30.2"
-#torch = "^2.0.1"
 torch = ">=1.13.1"
+#torch = ">=1.13.1"
 #xformers = ">=0.0.16"	# don’t include this. It fails on GitHub actions. Support in Makefile.
+#xformers = ">=0.0.20"
