Cleaned up documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ theme: windmill
 
 extra:
 #  logo: path
-  version: v0.1.3
+  version: v0.1.5
   article_nav_top: true
   article_nav_bottom: true
   history_buttons: true
@@ -29,22 +29,22 @@ plugins:
           options:
             show_source: False
 nav:
-  - Home: README.md
-  - Getting Started: docs.shared/GETTING_STARTED.md
+  - Home: index.md
+  - Getting Started: GETTING_STARTED.md
   - Developer Guide:
     - Design Principles: DESIGN_PRINCIPLES.md
-    - Using Makefile: docs.shared/MAKEFILE.md
+    - Using Makefile: MAKEFILE_INFO.md
   - Community:
-    - Contributing: docs.shared/community/CONTRIBUTING.md
+    - Contributing: community/CONTRIBUTING.md
     - Project Philosophy: PROJECT_PHILOSOPHY.md
-    - Code of Conduct: docs.shared/community/CODE_OF_CONDUCT.md
+    - Code of Conduct: community/CODE_OF_CONDUCT.md
     - Support:
       - Support: support/README.md 
       - FAQ: support/FAQ/README.md
       - Troubleshoot: support/troubleshooting_guides/README.md
   - See Also:
-    - Diagrams: docs.shared/diagrams/README.md
-    - License: docs.shared/LICENSE.md
+    - Diagrams: diagrams/README.md
+    - License: LICENSE.md
   - API Reference:
 
     - openssm:
