--- a/examples/kbase/pyproject.toml
+++ b/examples/kbase/pyproject.toml
@@ -1,10 +1,7 @@
 [tool.poetry]
-name = "chatssm"
-#packages = [
-#    { include = "../chatssm" },
-#]
-version = "0.0.4"
-description = "ChatSSM Sandbox"
+name = "kbase"
+version = "0.0.3"
+description = "Knowledge-Base Sandbox"
 authors = ["ctn <ctn@aitomatic.com>"]
 license = "Apache 2.0"
 readme = "README.md"
@@ -22,7 +19,7 @@ openai = "^0.27.0"
 flask = "^2.0.0"
 python-dotenv = "^0.19.0"
 llama-index = ">=0.6.9"
-llama-hub = ">=0.0.1"
+llama-hub = ">=0.0.3"
 openssm = ">=0.1.3"
 gunicorn = ">=20.1.0"
 torch = "=1.13.1"
