--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,10 @@
 [tool.poetry]
 authors = ["Aitomatic Engineering <engineering@aitomatic.com>"]
-description = "OpenSSM – 'Small Specialist Models' for Industrial AI"
+description = "OpenSSM - 'Small Specialist Models' for Industrial AI"
 name = "openssm"
+packages = [
+  {include = "openssm"},
+]
 readme = "README.md"
 version = "0.1.5"
 
@@ -10,23 +13,21 @@ build-backend = "poetry.core.masonry.api"
 requires = ["poetry-core"]
 
 [tool.poetry.dependencies]
-python = ">=3.8.1,<4.0"
+python = ">=3.10,<4.0"
 # LlamaIndex & related
 llama-hub = ">=0.0.4"
 llama-index = ">=0.6.33"
 # misc / other
-accelerate = "^0.20.3"
-einops = "^0.6.1"
+accelerate = ">=0.20.3"
+einops = ">=0.6.1"
 pypdf = ">=3.11.0"
 pytest = ">=7.0.0"
-transformers = "^4.30.2"
+transformers = ">=4.30.2"
 torch = ">=1.13.1"
-#torch = ">=1.13.1"
 #xformers = ">=0.0.16"	# don’t include this. It fails on GitHub actions. Support in Makefile.
 #xformers = ">=0.0.20"
 
 [tool.pytest.ini_options]
 filterwarnings = [
-    "ignore:pkg_resources is deprecated as an API:DeprecationWarning"
+  "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
 ]
-
