--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,6 +3,6 @@ current_version = 0.1.5
 commit = False
 tag = True
 
+[bumpversion:file:openssm/VERSION]
 [bumpversion:file:pyproject.toml]
-
 [bumpversion:file:docs/mkdocs.yml.inc]
