--- a/examples/kbase/deprecated/Dockerfile
+++ b/examples/kbase/deprecated/Dockerfile
@@ -1,5 +1,5 @@
-# Use an official Python runtime as a parent image
-FROM python:3.8-slim-buster
+# Use an official Python 3.10 runtime as a parent image
+FROM python:3.10-slim-buster
 
 # Set the working directory in the container to /apps/kbase
 WORKDIR /app
@@ -9,6 +9,9 @@ COPY . /app
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Install your custom .whl package
+RUN pip install --no-cache-dir dist/openssm-0.1.5-py3-none-any.whl
 
 # Make port 8080 available to the world outside this container
 EXPOSE 8080
