--- a/examples/kbase/pyproject.toml
+++ b/examples/kbase/pyproject.toml
@@ -14,13 +14,14 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
+#openssm = { path = "dist/openssm-0.1.5-py3-none-any.whl" }
+openssm = ">=0.1.0"
 python = ">=3.8.1,<4.0"
 openai = "^0.27.0"
 flask = "^2.0.0"
 python-dotenv = "^0.19.0"
 llama-index = ">=0.6.9"
 llama-hub = ">=0.0.3"
-openssm = ">=0.1.3"
 gunicorn = ">=20.1.0"
 torch = "=1.13.1"
 #nvidia-cuda-nvrtc-cu11 = "=11.7.99"
