--- a/.pylintrc
+++ b/.pylintrc
@@ -636,6 +636,7 @@ disable=raw-checker-failed,
         line-too-long,
         unspecified-encoding,
         no-member,
+        import-self,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
