--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ requires = ["poetry-core"]
 
 [tool.poetry.dependencies]
 python = ">=3.8.1,<4.0"
+python-dotenv = ">=0.19.0"
 # LlamaIndex & related
 llama-hub = ">=0.0.4"
 llama-index = ">=0.6.33"
