--- a/.pylintrc
+++ b/.pylintrc
@@ -616,25 +616,25 @@ confidence=HIGH,
 # no Warning level messages displayed, use "--disable=all --enable=classes
 # --disable=W".
 disable=raw-checker-failed,
-        bad-inline-option,
-        locally-disabled,
-        file-ignored,
-        suppressed-message,
-        useless-suppression,
-        deprecated-pragma,
-        use-symbolic-message-instead,
+#        bad-inline-option,
+#        locally-disabled,
+#        file-ignored,
+#        suppressed-message,
+#        useless-suppression,
+#        deprecated-pragma,
+#        use-symbolic-message-instead,
 	  missing-class-docstring,
 	  missing-function-docstring,
 	  missing-module-docstring,
-	  too-few-public-methods,
-	  trailing-newlines,
-	  relative-beyond-top-level,
-	  useless-parent-delegation,
+#	  too-few-public-methods,
+#	  trailing-newlines,
+#	  relative-beyond-top-level,
+#	  useless-parent-delegation,
 	  import-error,
-	  unrecognized-option,
+#	  unrecognized-option,
 	  unnecessary-pass,
 	  line-too-long,
-	  unspecified-encoding,
+#	  unspecified-encoding,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
