--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ requires = ["poetry-core"]
 [tool.poetry.dependencies]
 python = ">=3.8.1,<4.0"
 python-dotenv = ">=0.19.0"
+pydantic = ">=1.10"
+openai = ">=0.27"
 # LlamaIndex & related
 llama-hub = ">=0.0.4"
 llama-index = ">=0.6.33"
