--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,32 +1,81 @@
 [tool.poetry]
-authors = ["Aitomatic Engineering <engineering@aitomatic.com>"]
-description = "OpenSSA - 'Small Specialist Agents' for Industrial AI"
 name = "openssa"
+version = "0.1.6"
+
+authors = ["Aitomatic, Inc. <engineering@aitomatic.com>"]
+license = "Apache-2.0"
+
+description = "OpenSSA - 'Small Specialist Agents' for Industrial AI"
+readme = "README.md"
+
+homepage = "https://openssa.org"
+repository = "https://github.com/aitomatic/openssa"
+documentation = "https://aitomatic.github.io/openssa"
+
+keywords = [
+  "Artificial Intelligence", "A.I.", "AI",
+  "industrial",
+  "specialist", "specialized",
+  "domain", "expertise", "knowledge",
+]
+classifiers = [
+]
+
 packages = [
   {include = "openssa"},
 ]
-readme = "README.md"
-version = "0.1.6"
+
+include = [
+]
+exclude = [
+]
+
 
 [tool.poetry.group.dev.dependencies]
-ipykernel = "^6.25.2"
+ipykernel = ">=6.27"
+
+[tool.poetry.group.docs.dependencies]
+mkdocs = ">=1.5"
+mkdocs-custommill = ">=1.3"
+mkdocs-material = ">=9.4"
+mkdocs-windmill = ">=1.0"
+mkdocstrings = {version = ">=0.24", extras=["crystal", "python"]}
+
+[tool.poetry.dependencies]
+python = ">=3.10,<3.12"
+# OpenAI & related
+openai = ">=1.3"
+# LlamaIndex & related
+llama-index = ">=0.9"
+llama-hub = ">=0.0.50"
+docx2txt = ">=0.8"  # for reading .docx files
+pypdf = ">=3.17"  # for reading .pdf files
+pycryptodome = ">=3.19"  # for reading .pdf files: PyCryptodome is required for AES algorithm
+# file systems
+fsspec = ">=2023.10"  # base/local file system
+adlfs = ">=2023.10"  # Azure Data Lake
+gcsfs = ">=2023.10"  # Google Cloud Storage
+s3fs = ">=2023.10"  # S3
+# misc / other
+pydantic = ">=2.5"
+python-dotenv = ">=1.0"
+httpx = ">=0.25"
+google-api-python-client = ">=2.109"
+
+# optional dependencies required by extras
+pytest = {version = ">=7.4", optional = true}
+
+[tool.poetry.extras]
+test = [
+  'pytest',
+]
+
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
-requires = ["poetry-core"]
-
-[tool.poetry.dependencies]
-python = ">=3.8.1,<3.12"
-python-dotenv = ">=0.19.0"
-pydantic = ">=1.10"
-openai = "~1.3.2"
-# LlamaIndex & related
-llama-hub = ">=0.0.4"
-llama-index = "~0.9.2"
-# misc / other
-pytest = ">=7.0.0"
-google-api-python-client = ">=2.0"
-httpx = "^0.25.0"
+requires = [
+  "poetry-core >= 1.8",
+]
 
 
 [tool.pytest.ini_options]
