--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,10 +64,20 @@ google-api-python-client = ">=2.109"
 
 # optional dependencies required by extras
 pytest = {version = ">=7.4", optional = true}
+pillow = {version = ">=9.5", optional = true}
+python-pptx = {version = ">=0.6", optional = true}
+torch = {version = ">=2.0", optional = true}
+transformers = {version = ">=4.35", optional = true}
 
 [tool.poetry.extras]
 test = [
   'pytest',
+]
+cv = [  # for processing images either standalone or in files such as .PPTX
+  "pillow",
+  "python-pptx",
+  "torch",
+  "transformers",
 ]
 
 
