update experimental SSA code

--- a/examples/streamlit-ssa-prob-solver/Makefile
+++ b/examples/streamlit-ssa-prob-solver/Makefile
@@ -3,4 +3,5 @@ install:
 	python3 -m pip install -r requirements.txt --upgrade --user
 
 run:
-	python3 -m streamlit run main.py
+	python3 -m streamlit run main.py \
+		--server.allowRunOnSave=true --server.runOnSave=true
