update experimental SSA code

--- a/openssa/contrib/streamlit_ssa_prob_solver/requirements.txt
+++ b/openssa/contrib/streamlit_ssa_prob_solver/requirements.txt
@@ -1,3 +1,6 @@
+# OpenSSA
+OpenSSA @ https://GitHub.com/Aitomatic/OpenSSA/archive/main.zip
+
 # Streamlit & related
 Streamlit >= 1.29.0
 Streamlit-Mic-Recorder >= 0.0.4
