--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ python = ">=3.10,<3.12"
 openai = ">=1.3"
 # LlamaIndex & related
 llama-index = ">=0.9"
-llama-hub = ">=0.0.50"
+llama-hub = ">=0.0.52"
 docx2txt = ">=0.8"  # for reading .docx files
 pypdf = ">=3.17"  # for reading .pdf files
 pycryptodome = ">=3.19"  # for reading .pdf files: PyCryptodome is required for AES algorithm
@@ -56,7 +56,11 @@ fsspec = ">=2023.10,<2023.12"  # base/local file system
 adlfs = ">=2023.10,<2023.12"  # Azure Data Lake
 gcsfs = ">=2023.10,<2023.12"  # Google Cloud Storage
 s3fs = ">=2023.10,<2023.12"  # S3
+# contrib-supporting dependencies
+streamlit = ">=1.29"
+streamlit-mic-recorder = ">=0.0.4"
 # misc / other
+click = ">=8.1"
 pydantic = ">=2.5"
 python-dotenv = ">=1.0"
 httpx = ">=0.25"
@@ -71,7 +75,7 @@ transformers = {version = ">=4.35", optional = true}
 
 [tool.poetry.extras]
 test = [
-  'pytest',
+  "pytest",
 ]
 cv = [  # for processing images either standalone or in files such as .PPTX
   "pillow",
@@ -79,6 +83,10 @@ cv = [  # for processing images either standalone or in files such as .PPTX
   "torch",
   "transformers",
 ]
+
+
+[tool.poetry.scripts]
+openssa = "openssa.utils.cli:openssa_cli"
 
 
 [build-system]
