--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,16 +47,20 @@ python = ">=3.10,<3.12"
 openai = ">=1.3"
 # LlamaIndex & related
 llama-index = ">=0.9"
-llama-hub = ">=0.0.50"
+llama-hub = ">=0.0.52"
 docx2txt = ">=0.8"  # for reading .docx files
 pypdf = ">=3.17"  # for reading .pdf files
 pycryptodome = ">=3.19"  # for reading .pdf files: PyCryptodome is required for AES algorithm
 # file systems
-fsspec = ">=2023.10"  # base/local file system
-adlfs = ">=2023.10"  # Azure Data Lake
-gcsfs = ">=2023.10"  # Google Cloud Storage
-s3fs = ">=2023.10"  # S3
+fsspec = ">=2023.10,<2023.12"  # base/local file system
+adlfs = ">=2023.10,<2023.12"  # Azure Data Lake
+gcsfs = ">=2023.10,<2023.12"  # Google Cloud Storage
+s3fs = ">=2023.10,<2023.12"  # S3
+# contrib-supporting dependencies
+streamlit = ">=1.29"
+streamlit-mic-recorder = ">=0.0.4"
 # misc / other
+click = ">=8.1"
 pydantic = ">=2.5"
 python-dotenv = ">=1.0"
 httpx = ">=0.25"
@@ -64,11 +68,25 @@ google-api-python-client = ">=2.109"
 
 # optional dependencies required by extras
 pytest = {version = ">=7.4", optional = true}
+pillow = {version = ">=9.5", optional = true}
+python-pptx = {version = ">=0.6", optional = true}
+torch = {version = ">=2.0", optional = true}
+transformers = {version = ">=4.35", optional = true}
 
 [tool.poetry.extras]
 test = [
-  'pytest',
+  "pytest",
 ]
+cv = [  # for processing images either standalone or in files such as .PPTX
+  "pillow",
+  "python-pptx",
+  "torch",
+  "transformers",
+]
+
+
+[tool.poetry.scripts]
+openssa = "openssa.utils.cli:openssa_cli"
 
 
 [build-system]
