--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "openssa"
-version = "0.1.6"
+version = "0.23.12.5"
 
 authors = ["Aitomatic, Inc. <engineering@aitomatic.com>"]
 license = "Apache-2.0"
@@ -28,6 +28,7 @@ packages = [
 include = [
 ]
 exclude = [
+  "**/.openssa/"
 ]
 
 
