use Lepton LM service endpoints

--- a/openssa/contrib/streamlit_ssa_prob_solver/Makefile
+++ b/openssa/contrib/streamlit_ssa_prob_solver/Makefile
@@ -1,3 +1,3 @@
 run:
-	OPENAI_API_KEY=AITOMATIC streamlit run main.py \
+	OPENAI_API_KEY='n/a' streamlit run main.py \
 		--server.allowRunOnSave=true --server.runOnSave=true
