--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ httpx = ">=0.25"
 google-api-python-client = ">=2.109"
 
 # optional dependencies required by extras
+pylint = {version = ">=3.0", optional = true}
 pytest = {version = ">=7.4", optional = true}
 pillow = {version = ">=9.5", optional = true}
 python-pptx = {version = ">=0.6", optional = true}
@@ -75,6 +76,9 @@ torch = {version = ">=2.0", optional = true}
 transformers = {version = ">=4.35", optional = true}
 
 [tool.poetry.extras]
+lint = [
+  "pylint",
+]
 test = [
   "pytest",
 ]
