--- a/.github/workflows/install-and-test.yml
+++ b/.github/workflows/install-and-test.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          poetry install --extras=lint,test
+          poetry install --extras=lint --extras=test
           make jest-setup
 
       - name: Lint Code
