update linting check in GitHub workflow

--- a/.github/workflows/install-and-test.yml
+++ b/.github/workflows/install-and-test.yml
@@ -39,8 +39,8 @@ jobs:
           poetry install --extras=lint --extras=test
           make jest-setup
 
-      - name: Lint Code
-        run: make lint
+      - name: Lint Python Code
+        run: make lint-py
 
       - name: Run Tests
         run: make test
