update experimental SSA code

--- a/openssa/contrib/streamlit_ssa_prob_solver/Makefile
+++ b/openssa/contrib/streamlit_ssa_prob_solver/Makefile
@@ -1,3 +1,2 @@
 run:
-	OPENAI_API_KEY='n/a' streamlit run main.py \
-		--server.allowRunOnSave=true --server.runOnSave=true
+	streamlit run main.py --server.allowRunOnSave=true --server.runOnSave=true
