minor edit to VSCode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,9 +7,9 @@
     "**/.mypy_cache": true,
     "**/__pycache__": true,
     "**/.pytest_cache": true,
-    "**/.ropeproject": true,
+    "**/.ropeproject": true
   },
 
   "python.analysis.diagnosticSeverityOverrides": {
-  },
+  }
 }
