--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,10 +2,22 @@
 name = "openssa"
 version = "0.23.12.7"
 
-authors = ["Aitomatic, Inc. <engineering@aitomatic.com>"]
+authors = [
+  "Aitomatic, Inc. <engineering@aitomatic.com>",
+  "Christopher Nguyen <ctn@aitomatic.com>",
+  "Vinh Luong <vinh@aitomatic.com>",
+  "Sang Dinh <sang@aitomatic.com>",
+]
+maintainers = [
+  "Aitomatic, Inc. <engineering@aitomatic.com>",
+  "Vinh Luong <vinh@aitomatic.com>",
+  "Sang Dinh <sang@aitomatic.com>",
+  "Chanh Le <chanh@aitomatic.com>",
+]
+
 license = "Apache-2.0"
 
-description = "OpenSSA - 'Small Specialist Agents' for Industrial AI"
+description = "OpenSSA - Small Specialist Agents for Industrial AI"
 readme = "README.md"
 
 homepage = "https://openssa.org"
