--- a/.github/workflows/install-lint-test.yml
+++ b/.github/workflows/install-lint-test.yml
@@ -35,12 +35,10 @@ jobs:
         run: echo $HOME/.local/bin >> $GITHUB_PATH
 
       - name: Install Dependencies
-        run: |
-          poetry install --extras=lint --extras=test
-          make jest-setup
+        run: poetry install --extras=lint --extras=test
 
-      - name: Lint Python Code
-        run: make lint-py
+      - name: Lint Code
+        run: make lint
 
       - name: Run Tests
         run: make test
