--- a/.github/workflows/install-lint-test.yml
+++ b/.github/workflows/install-lint-test.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install Poetry
         run: python3 -m pip install Poetry --upgrade
 
-      - name: Install Dependencies
+      - name: Install Package & Dependencies
         run: poetry install --extras=lint --extras=test
 
       - name: Lint Code
