--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,8 +59,8 @@ python = ">=3.10,<3.12"
 # OpenAI & related
 openai = ">=1.3"
 # LlamaIndex & related
-llama-index = ">=0.9"
-llama-hub = ">=0.0.55"
+llama-index = ">=0.9.14"  # should keep up-to-date with Llama-Index's minor releases (often backward-incompatible)
+llama-hub = ">=0.0.56"
 docx2txt = ">=0.8"  # for reading .docx files
 pypdf = ">=3.17"  # for reading .pdf files
 pycryptodome = ">=3.19"  # for reading .pdf files: PyCryptodome is required for AES algorithm
@@ -74,7 +74,7 @@ click = ">=8.1"
 pydantic = ">=2.5"
 python-dotenv = ">=1.0"
 httpx = ">=0.25"
-google-api-python-client = ">=2.109"
+google-api-python-client = ">=2.110"
 
 # optional dependencies required by extras
 pylint = {version = ">=3.0", optional = true}
@@ -84,7 +84,7 @@ python-pptx = {version = ">=0.6", optional = true}
 streamlit = {version = ">=1.29", optional = true}
 streamlit-mic-recorder = {version = ">=0.0.4", optional = true}
 torch = {version = ">=2.0", optional = true}
-transformers = {version = ">=4.35", optional = true}
+transformers = {version = ">=4.36", optional = true}
 
 [tool.poetry.extras]
 lint = [
