update GitHub workflow config files

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,13 +6,13 @@ on:
       - '*'
 
 jobs:
-  build:
+  pypi-release:
     runs-on: ubuntu-latest
 
     strategy:
-        matrix:
-          python-version:
-            - 3.11
+      matrix:
+        python-version:
+          - 3.11
 
     steps:
       - uses: actions/checkout@v4
