--- a/.github/workflows/install-lint-test.yml
+++ b/.github/workflows/install-lint-test.yml
@@ -32,7 +32,7 @@ jobs:
         run: python3 -m pip install Poetry --upgrade
 
       - name: Install Package & Dependencies
-        run: poetry install --extras=lint --extras=test
+        run: poetry install --with=lint --with=test
 
       - name: Lint Code
         run: make lint
