--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,10 @@
     "**/.ropeproject": true
   },
 
+  "[python]": {
+    "editor.formatOnSave": false
+  },
+
   "python.analysis.diagnosticSeverityOverrides": {
   }
 }
