--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,11 +48,8 @@ exclude = [
 ipykernel = ">=6.27"
 
 [tool.poetry.group.docs.dependencies]
-mkdocs = ">=1.5"
-mkdocs-custommill = ">=1.3"
-mkdocs-material = ">=9.5"
-mkdocs-windmill = ">=1.0"
-mkdocstrings = {version = ">=0.24", extras=["crystal", "python"]}
+sphinx = ">=7.2"
+myst-parser = ">=2.0"
 
 [tool.poetry.group.lint.dependencies]
 pylint = ">=3.0"
