use Sphinx Press Theme for docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ ipykernel = ">=6.27"
 
 [tool.poetry.group.docs.dependencies]
 sphinx = ">=7.2"
+sphinx-press-theme = ">=0.8"
 myst-parser = ">=2.0"
 
 [tool.poetry.group.lint.dependencies]
