--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,10 +65,10 @@ docx2txt = ">=0.8"  # for reading .docx files
 pypdf = ">=3.17"  # for reading .pdf files
 pycryptodome = ">=3.19"  # for reading .pdf files: PyCryptodome is required for AES algorithm
 # file systems
-fsspec = ">=2023.10,<2023.12"  # base/local file system
-adlfs = ">=2023.10,<2023.12"  # Azure Data Lake
-gcsfs = ">=2023.10,<2023.12"  # Google Cloud Storage
-s3fs = ">=2023.10,<2023.12"  # S3
+fsspec = ">=2023.12"  # base/local file system
+adlfs = ">=2023.10"  # Azure Data Lake
+gcsfs = ">=2023.12"  # Google Cloud Storage
+s3fs = ">=2023.12"  # S3
 # misc / other
 click = ">=8.1"
 loguru = ">=0.7"
