--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,12 +55,12 @@ pylint = ">=3.0"
 pytest = ">=7.4"
 
 [tool.poetry.dependencies]
-python = ">=3.11,<3.12"
+python = ">=3.10,<3.12"
 # OpenAI & related
-openai = ">=1.3"
+openai = ">=1.4"
 # LlamaIndex & related
 llama-index = ">=0.9.15"  # should keep up-to-date with Llama-Index's minor releases (often backward-incompatible)
-llama-hub = ">=0.0.58"
+llama-hub = ">=0.0.59"
 docx2txt = ">=0.8"  # for reading .docx files
 pypdf = ">=3.17"  # for reading .pdf files
 pycryptodome = ">=3.19"  # for reading .pdf files: PyCryptodome is required for AES algorithm
@@ -71,11 +71,12 @@ gcsfs = ">=2023.12"  # Google Cloud Storage
 s3fs = ">=2023.12"  # S3
 # misc / other
 click = ">=8.1"
+google-api-python-client = ">=2.111"
+httpx = ">=0.25"
 loguru = ">=0.7"
 pydantic = ">=2.5"
 python-dotenv = ">=1.0"
-httpx = ">=0.25"
-google-api-python-client = ">=2.111"
+tomli = { version = ">=2.0", python = "<3.11" }
 
 # optional dependencies required by extras
 streamlit = {version = ">=1.29", optional = true}
