--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ myst-parser = ">=2.0"
 
 [tool.poetry.group.lint.dependencies]
 pylint = ">=3.0"
+pydocstyle = ">=6.3"
 
 [tool.poetry.group.test.dependencies]
 pytest = ">=7.4"
