--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ exclude = [
 
 [tool.poetry.group.docs.dependencies]
 sphinx = ">=7.2"
-sphinx-autobuild = ">=2021.3.14"
+sphinx-autobuild = ">=2021.3"
 sphinx-press-theme = ">=0.8"
 myst-parser = ">=2.0"
 
@@ -60,11 +60,11 @@ pytest = ">=7.4"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
-# OpenAI & related
-openai = ">=1.4"
+# OpenAI interface
+openai = ">=1.6"
 # LlamaIndex & related
-llama-index = ">=0.9.15"  # should keep up-to-date with Llama-Index's minor releases (often backward-incompatible)
-llama-hub = ">=0.0.59"
+llama-index = ">=0.9.17"  # should keep up-to-date with Llama-Index's minor releases (often backward-incompatible)
+llama-hub = ">=0.0.60"
 docx2txt = ">=0.8"  # for reading .docx files
 pypdf = ">=3.17"  # for reading .pdf files
 pycryptodome = ">=3.19"  # for reading .pdf files: PyCryptodome is required for AES algorithm
