--- a/.github/workflows/install-lint-test-on-win.yml
+++ b/.github/workflows/install-lint-test-on-win.yml
@@ -28,6 +28,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Install Poetry
+        run: .\make get-poetry
+
       - name: Install Package & Dependencies
         run: .\make install
 
